# terminal

./: README.md
assets/: architecture-detailed-design.md  architecture-diagrams-new.md  architecture-overview.md  data-model-design-postgresql.md  system-architecture-design-optimized.md  technology-comparison.md
clients/rust-websocket-client/: .gitignore  Cargo.toml
clients/rust-websocket-client/src/: config.rs  error.rs  logger.rs  main.rs  terminal.rs  websocket.rs
clients/web-terminal/src/: App.tsx
clients/web-terminal/src/components/: DownloadModal.tsx  Header.tsx  Terminal.tsx  TerminalActions.tsx
kt-terminal/: .gitignore
kt-terminal/src/main/kotlin/dev/waylon/terminal/boundedcontexts/terminalsession/application/useCase/: GetAllTerminalSessionsUseCase.kt  GetTerminalSessionByIdUseCase.kt  TerminateTerminalSessionUseCase.kt
kt-terminal/src/main/kotlin/dev/waylon/terminal/boundedcontexts/terminalsession/infrastructure/config/: TerminalSessionRoutes.kt
kt-terminal/src/main/kotlin/dev/waylon/terminal/boundedcontexts/terminalsession/infrastructure/dto/: SessionRequests.kt
kt-terminal/src/main/resources/: application.conf
rs_sync/: .gitignore  Cargo.toml  README.md
rs_sync/client/: Cargo.toml
rs_sync/client/src/: main.rs
rs_sync/server/: Cargo.toml
rs_sync/server/src/: main.rs
rs_terminal/: Cargo.toml  README.md  config.toml
rs_terminal/src/: main.rs
rs_terminal/src/api/: dto.rs  mod.rs
rs_terminal/src/app_state/: app_state.rs  mod.rs  session.rs
rs_terminal/src/config/: config.rs  config_loader.rs  error.rs  mod.rs
rs_terminal/src/handlers/: mod.rs  rest.rs  websocket.rs  webtransport.rs
rs_terminal/src/protocol/: connection.rs  connection_base.rs  mod.rs  websocket_connection.rs  webtransport_connection.rs
rs_terminal/src/pty/: expectrl_pty_impl.rs  mock_pty.rs  mod.rs  portable_pty_impl.rs  pty_trait.rs  tokio_process_pty_impl.rs  windows_pty_impl.rs
rs_terminal/src/server/: mod.rs  server.rs
rs_terminal/src/service/: error.rs  message_handler.rs  mod.rs  pty_manager.rs  session_handler.rs  session_manager.rs
shl/: README.md  monitor-file-to-clipboard.ps1  output.txt  test-monitor.txt
