[package]
name = "rust-websocket-client"
version = "0.1.0"
edition = "2024"
authors = ["WaylonDev <waylon@waylon.dev>"]
description = "A production-ready Rust WebSocket client for terminal applications"
keywords = ["websocket", "terminal", "rust", "client"]
categories = ["command-line-utilities", "network-programming"]
repository = "https://github.com/waylondev/terminal"
license = "MIT"

[dependencies]
tokio = { version = "~1.40", features = ["full"] }
tokio-tungstenite = "~0.24"
futures-util = "~0.3"
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
clap = { version = "~4.5", features = ["derive"] }
serde = { version = "~1.0", features = ["derive"] }
toml = "~0.8"
thiserror = "~1.0"

[dev-dependencies]
tokio-test = "~0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "unwind"
