[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
arboard = "3.3"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock", "std"] }
serde_json = "1.0"

